welcome.lessons.welcome.instructions.Instructions.scala.error
Program:2: error: not found: value baissebrosse
baissebrosse()
^Program:4: error: not found: value baissebrosse
baissebrosse()
^Program:6: error: not found: value baissebrosse
baissebrosse()
^Program:8: error: not found: value baissebrosse
baissebrosse()
^Program:10: error: not found: value baissebrosse
baissebrosse()
^Program:12: error: not found: value baissebrosse
baissebrosse()
^Program:14: error: not found: value baissebrosse
baissebrosse()
^Program:16: error: not found: value baissebrosse
baissebrosse()
^Program:18: error: not found: value baissebrosse
baissebrosse()
^Program:20: error: not found: value baissebrosse
baissebrosse()
^Program:22: error: not found: value baissebrosse
baissebrosse()
^Program:24: error: not found: value baissebrosse
baissebrosse()
^Program:26: error: not found: value baissebrosse
baissebrosse()
^Program:28: error: not found: value baissebrosse
baissebrosse()
^Program:30: error: not found: value baissebrosse
baissebrosse()
^