welcome.lessons.welcome.instructions.Instructions.scala.code
avance()
baissebrosse()
avance()
baissebrosse()
droite()
baissebrosse()
avance()
baissebrosse()
avance()
baissebrosse()
droite()
baissebrosse()
avance()
baissebrosse()
avance()
baissebrosse()
droite()
baissebrosse()
avance()
baissebrosse()
avance()
baissebrosse()
droite()
baissebrosse()
avance()
baissebrosse()
droite()
baissebrosse()
avance()
baissebrosse()
gauche()